More preprocessing, EDA1 -> DataUnderstanding

--- a/DataUnderstanding.ipynb
+++ b/DataUnderstanding.ipynb
@@ -311,7 +311,7 @@
     "  </tr>\n",
     "  <tr>\n",
     "    <td><b>GenderProbM</td>\n",
-    "    <td><code>int</td>\n",
+    "    <td><code>object</td>\n",
     "    <td>Tỷ lệ giới tính nam của Pokemon đó, nếu Pokemon đó vô tính đặc điểm này sẽ được để giá trị -</td>\n",
     "  </tr>\n",
     "  <tr>\n",
@@ -332,7 +332,7 @@
     "  <tr>\n",
     "    <td><b>EggGroup</td>\n",
     "    <td><code>object</td>\n",
-    "    <td>Thể hiện thuộc tính trứng của Pokemon, thuộc tính này quyết định giữa hai Pokemon có thể phối giống với nhau hay không, mỗi Pokemon cũng có thể có thuộc tính trứng chính hoặc thêm một thuộc tính trứng phụ </td>\n",
+    "    <td>Thể hiện thuộc tính trứng của Pokemon, thuộc tính này quyết định giữa hai Pokemon có thể phối giống với nhau hay không, mỗi Pokemon cũng có thể có thuộc tính trứng hoặc không</td>\n",
     "  </tr>\n",
     "  <tr>\n",
     "    <td><b>LevelingRate</td>\n",
