--- a/Preprocessing.ipynb
+++ b/Preprocessing.ipynb
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 756,
+   "execution_count": 795,
    "id": "55c078dd",
    "metadata": {},
    "outputs": [],
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 757,
+   "execution_count": 796,
    "id": "c72b5135",
    "metadata": {},
    "outputs": [],
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 758,
+   "execution_count": 797,
    "id": "e764f016",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 759,
+   "execution_count": 798,
    "id": "0317442e",
    "metadata": {},
    "outputs": [
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 760,
+   "execution_count": 799,
    "id": "a1534aa0",
    "metadata": {},
    "outputs": [
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 761,
+   "execution_count": 800,
    "id": "aec0a1ca",
    "metadata": {},
    "outputs": [
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 762,
+   "execution_count": 801,
    "id": "752b30a5",
    "metadata": {},
    "outputs": [],
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 763,
+   "execution_count": 802,
    "id": "10f8b415",
    "metadata": {},
    "outputs": [
@@ -354,7 +354,7 @@
        "65    Poliwag     Water   None"
       ]
      },
-     "execution_count": 763,
+     "execution_count": 802,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 764,
+   "execution_count": 803,
    "id": "91e3f655",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
        "71           Arcanine          ['Fire']"
       ]
      },
-     "execution_count": 764,
+     "execution_count": 803,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -479,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 765,
+   "execution_count": 804,
    "id": "6076cf58",
    "metadata": {},
    "outputs": [],
@@ -500,7 +500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 766,
+   "execution_count": 805,
    "id": "e60ca2be",
    "metadata": {},
    "outputs": [
@@ -536,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 767,
+   "execution_count": 806,
    "id": "823cd9e5",
    "metadata": {},
    "outputs": [
@@ -572,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 768,
+   "execution_count": 807,
    "id": "1a6614c9",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 769,
+   "execution_count": 808,
    "id": "13be0762",
    "metadata": {},
    "outputs": [
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 770,
+   "execution_count": 809,
    "id": "2a3a8ff8",
    "metadata": {},
    "outputs": [],
@@ -640,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 771,
+   "execution_count": 810,
    "id": "d3f98c83",
    "metadata": {},
    "outputs": [
@@ -860,7 +860,7 @@
        "9     43           1      False  "
       ]
      },
-     "execution_count": 771,
+     "execution_count": 810,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -871,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 772,
+   "execution_count": 811,
    "id": "ff41e7cb",
    "metadata": {},
    "outputs": [
@@ -1584,7 +1584,7 @@
        "9              1.0  "
       ]
      },
-     "execution_count": 772,
+     "execution_count": 811,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1608,7 +1608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 773,
+   "execution_count": 812,
    "id": "5ca78d1c",
    "metadata": {},
    "outputs": [
@@ -1728,7 +1728,7 @@
        "9  10          Squirtle         10    Caterpie"
       ]
      },
-     "execution_count": 773,
+     "execution_count": 812,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1752,7 +1752,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 774,
+   "execution_count": 813,
    "id": "a44d07f9",
    "metadata": {},
    "outputs": [],
@@ -1773,7 +1773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 775,
+   "execution_count": 814,
    "id": "35a3bcab",
    "metadata": {},
    "outputs": [],
@@ -1794,7 +1794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 776,
+   "execution_count": 815,
    "id": "a7eba820",
    "metadata": {},
    "outputs": [],
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 777,
+   "execution_count": 816,
    "id": "a11a7639",
    "metadata": {},
    "outputs": [],
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 778,
+   "execution_count": 817,
    "id": "492d7b3a",
    "metadata": {},
    "outputs": [
@@ -2552,7 +2552,7 @@
        "9              1.0  "
       ]
      },
-     "execution_count": 778,
+     "execution_count": 817,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2574,7 +2574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 779,
+   "execution_count": 818,
    "id": "382ca1da",
    "metadata": {},
    "outputs": [
@@ -2595,7 +2595,7 @@
        "Length: 49, dtype: int64"
       ]
      },
-     "execution_count": 779,
+     "execution_count": 818,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2619,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 780,
+   "execution_count": 819,
    "id": "9e766d00",
    "metadata": {},
    "outputs": [],
@@ -2640,8 +2640,119 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 781,
+   "execution_count": 820,
    "id": "0442c289",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3               Mega Venusaur\n",
+      "7            Mega Charizard X\n",
+      "8            Mega Charizard Y\n",
+      "12             Mega Blastoise\n",
+      "19              Mega Beedrill\n",
+      "23               Mega Pidgeot\n",
+      "71              Mega Alakazam\n",
+      "87               Mega Slowbro\n",
+      "102               Mega Gengar\n",
+      "124           Mega Kangaskhan\n",
+      "137               Mega Pinsir\n",
+      "141             Mega Gyarados\n",
+      "154           Mega Aerodactyl\n",
+      "163             Mega Mewtwo X\n",
+      "164             Mega Mewtwo Y\n",
+      "196             Mega Ampharos\n",
+      "216                     Unown\n",
+      "224              Mega Steelix\n",
+      "229               Mega Scizor\n",
+      "232            Mega Heracross\n",
+      "248             Mega Houndoom\n",
+      "268            Mega Tyranitar\n",
+      "270                     Ho-oh\n",
+      "275             Mega Sceptile\n",
+      "279             Mega Blaziken\n",
+      "283             Mega Swampert\n",
+      "306            Mega Gardevoir\n",
+      "327              Mega Sableye\n",
+      "329               Mega Mawile\n",
+      "333               Mega Aggron\n",
+      "336             Mega Medicham\n",
+      "339            Mega Manectric\n",
+      "349             Mega Sharpedo\n",
+      "354             Mega Camerupt\n",
+      "366              Mega Altaria\n",
+      "383                  Castform\n",
+      "387              Mega Banette\n",
+      "393                Mega Absol\n",
+      "397               Mega Glalie\n",
+      "409            Mega Salamence\n",
+      "413            Mega Metagross\n",
+      "418               Mega Latias\n",
+      "420               Mega Latios\n",
+      "422             Primal Kyogre\n",
+      "424            Primal Groudon\n",
+      "426             Mega Rayquaza\n",
+      "429        DeoxysAttack Forme\n",
+      "457                     Burmy\n",
+      "468                   Cherrim\n",
+      "469                   Shellos\n",
+      "470                 Gastrodon\n",
+      "476              Mega Lopunny\n",
+      "494             Mega Garchomp\n",
+      "498              Mega Lucario\n",
+      "511            Mega Abomasnow\n",
+      "527              Mega Gallade\n",
+      "591               Mega Audino\n",
+      "610                  Basculin\n",
+      "646                  Deerling\n",
+      "647                  Sawsbuck\n",
+      "711       Kyurem Black Kyurem\n",
+      "712       Kyurem White Kyurem\n",
+      "713     Keldeo Ordinary Forme\n",
+      "714     Keldeo Resolute Forme\n",
+      "717                  Genesect\n",
+      "734                  Vivillon\n",
+      "737                   Flabébé\n",
+      "738                   Floette\n",
+      "739                   Florges\n",
+      "744                   Furfrou\n",
+      "780    Pumpkaboo Average Size\n",
+      "781      Pumpkaboo Small Size\n",
+      "782      Pumpkaboo Large Size\n",
+      "783      Pumpkaboo Super Size\n",
+      "784    Gourgeist Average Size\n",
+      "785      Gourgeist Small Size\n",
+      "786      Gourgeist Large Size\n",
+      "787      Gourgeist Super Size\n",
+      "792                   Xerneas\n",
+      "794        Zygarde Half Forme\n",
+      "796              Mega Diancie\n",
+      "Name: Name, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "pd.options.display.max_rows = None\n",
+    "missing_pokemon = merged_pokemon[merged_pokemon.isna().any(axis=1)]['Name']\n",
+    "print(missing_pokemon)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4a704744",
+   "metadata": {},
+   "source": [
+    "<span style = \"font-family: Verdana; font-size: 20px\">\n",
+    "\n",
+    "Có khá nhiều Pokemon bình thường bị thiếu thông tin, chứ không chỉ có các dạng tiến hoá bậc Mega như đã dự đoán"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 821,
+   "id": "a3117aaa",
    "metadata": {},
    "outputs": [
     {
@@ -2686,9 +2797,7 @@
     }
    ],
    "source": [
-    "pd.options.display.max_rows = None\n",
-    "non_mega = merged_pokemon[merged_pokemon.isna().any(axis=1)]['Name']\n",
-    "non_mega = non_mega[~non_mega.str.startswith('Mega')]\n",
+    "non_mega = missing_pokemon[~missing_pokemon.str.startswith('Mega')]\n",
     "print(non_mega)\n",
     "pd.options.display.max_rows = 10"
    ]
@@ -2700,8 +2809,6 @@
    "source": [
     "<span style = \"font-family: Verdana; font-size: 20px\">\n",
     "\n",
-    "Có khá nhiều Pokemon bình thường bị thiếu thông tin, chứ không chỉ có các dạng tiến hoá bậc Mega như đã dự đoán\n",
-    "\n",
     "Đầu tiên hãy kiểm tra xem các Pokemon bị thiếu thông tin này có trong `pokemonfullstats.csv` dưới cách đặt tên khác hay không\n",
     "\n",
     "Tuy nhiên cũng có một số Pokemon có khả năng là bị thiếu thông tin do tên được điền sai, điển hình như `Primal Kyogre`, `Primal Groudon`, `DeoxysAttack Forme`, `Kyurem Black Kyurem`, `Kyurem White Kyurem`, `Keldeo Ordinary Forme`, `Keldeo Resolute Forme` và `Zygarde Half Forme`, những ví dụ này sẽ được xử lý riêng sau\n",
@@ -2712,7 +2819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 782,
+   "execution_count": 822,
    "id": "803abd33",
    "metadata": {},
    "outputs": [
@@ -2891,7 +2998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 783,
+   "execution_count": 823,
    "id": "f3b96791",
    "metadata": {},
    "outputs": [],
@@ -2982,59 +3089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "21167489",
-   "metadata": {
-    "vscode": {
-     "languageId": "coffeescript"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Primal forms have enhanced stats\n",
-    "merged_pokemon.loc[primal_kyogre_idx, 'Attack'] = 150.0\n",
-    "merged_pokemon.loc[primal_kyogre_idx, 'SpecialAttack'] = 180.0\n",
-    "merged_pokemon.loc[primal_kyogre_idx, 'TotalStats'] = 770.0\n",
-    "\n",
-    "# Primal Groudon - based on Groudon with enhanced stats\n",
-    "primal_groudon_idx = merged_pokemon[merged_pokemon['Name'] == 'Primal Groudon'].index[0]\n",
-    "groudon_data = pokemonfullstats[pokemonfullstats['Name'] == 'Groudon'].iloc[0]\n",
-    "for col in merged_pokemon.columns:\n",
-    "    if col not in ['ID', 'Name', 'Type 1', 'Type 2']:\n",
-    "        merged_pokemon.loc[primal_groudon_idx, col] = groudon_data[col]\n",
-    "merged_pokemon.loc[primal_groudon_idx, 'Attack'] = 180.0\n",
-    "merged_pokemon.loc[primal_groudon_idx, 'SpecialAttack'] = 150.0\n",
-    "merged_pokemon.loc[primal_groudon_idx, 'TotalStats'] = 770.0\n",
-    "\n",
-    "# Pumpkaboo variants - use average values\n",
-    "pumpkaboo_avg = pokemonfullstats[pokemonfullstats['Name'].str.contains('Pumpkaboo', na=False)]\n",
-    "for name in ['Pumpkaboo Average Size', 'Pumpkaboo Small Size', 'Pumpkaboo Large Size', 'Pumpkaboo Super Size']:\n",
-    "    idx = merged_pokemon[merged_pokemon['Name'] == name].index[0]\n",
-    "    pumpkaboo_base = pokemonfullstats[pokemonfullstats['Name'] == 'Pumpkaboo Small'].iloc[0]\n",
-    "    for col in merged_pokemon.columns:\n",
-    "        if col not in ['ID', 'Name', 'Type 1', 'Type 2']:\n",
-    "            merged_pokemon.loc[idx, col] = pumpkaboo_base[col]\n",
-    "\n",
-    "# Gourgeist variants - use average values\n",
-    "for name in ['Gourgeist Average Size', 'Gourgeist Small Size', 'Gourgeist Large Size', 'Gourgeist Super Size']:\n",
-    "    idx = merged_pokemon[merged_pokemon['Name'] == name].index[0]\n",
-    "    gourgeist_base = pokemonfullstats[pokemonfullstats['Name'] == 'Gourgeist Small'].iloc[0]\n",
-    "    for col in merged_pokemon.columns:\n",
-    "        if col not in ['ID', 'Name', 'Type 1', 'Type 2']:\n",
-    "            merged_pokemon.loc[idx, col] = gourgeist_base[col]\n",
-    "\n",
-    "# For Mega evolutions, we'll fill with enhanced stats based on their base forms\n",
-    "mega_pokemon = merged_pokemon[merged_pokemon['Name'].str.startswith('Mega', na=False) & merged_pokemon.isna().any(axis=1)]\n",
-    "\n",
-    "for idx in mega_pokemon.index:\n",
-    "    mega_name = merged_pokemon.loc[idx, 'Name']\n",
-    "    # E"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 784,
+   "execution_count": 824,
    "id": "c15648e0",
    "metadata": {},
    "outputs": [],
@@ -3113,7 +3168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 785,
+   "execution_count": 825,
    "id": "f45404a9",
    "metadata": {},
    "outputs": [],
@@ -3123,7 +3178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 786,
+   "execution_count": 826,
    "id": "673fe31f",
    "metadata": {},
    "outputs": [
@@ -3153,7 +3208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 787,
+   "execution_count": 827,
    "id": "e65d1ba2",
    "metadata": {},
    "outputs": [
@@ -3183,7 +3238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 788,
+   "execution_count": 828,
    "id": "b7783de9",
    "metadata": {},
    "outputs": [
@@ -3266,7 +3321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 789,
+   "execution_count": 829,
    "id": "fec5fad0",
    "metadata": {},
    "outputs": [],
@@ -3288,7 +3343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 790,
+   "execution_count": 830,
    "id": "8b584419",
    "metadata": {},
    "outputs": [],
@@ -3312,7 +3367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 791,
+   "execution_count": 831,
    "id": "de76aef5",
    "metadata": {},
    "outputs": [],
@@ -3323,7 +3378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 792,
+   "execution_count": 832,
    "id": "caf0d5dc",
    "metadata": {},
    "outputs": [
@@ -4112,7 +4167,7 @@
        "[742 rows x 48 columns]"
       ]
      },
-     "execution_count": 792,
+     "execution_count": 832,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4123,7 +4178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 793,
+   "execution_count": 833,
    "id": "ef3019ac",
    "metadata": {},
    "outputs": [],
